--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: "https://sharanya510.github.io"
 languageCode: "en-us"
 title: "Sharanya Gandla"
-theme: master
+theme: hugo-profile
 
 outputs:
   home:
