--- a/config.yaml
+++ b/config.yaml
@@ -14,43 +14,12 @@ outputs:
 
 Paginate: 3
 enableRobotsTXT: true
-# disqusShortname: your-disqus-shortname
-# googleAnalytics: G-MEASUREMENT_ID
+
 
 markup:
   goldmark:
     renderer:
       unsafe: true
-
-Menus:
-  main:
-    - identifier: blog
-      name: Blog
-      title: Blog posts
-      url: /blogs
-      weight: 1
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
-    #Dropdown menu
-    # - identifier: dropdown
-    #   title: Example dropdown menu
-    #   name: Dropdown
-    #   weight: 3
-    # - identifier: dropdown1
-    #   title: example dropdown 1
-    #   name: example 1
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 1
-    # - identifier: dropdown2
-    #   title: example dropdown 2
-    #   name: example 2
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 2
 
 params:
   # title: "Hugo Profile"
@@ -61,7 +30,7 @@ params:
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
   # Note the lack of "" in true, it should be of boolean type.
-  useBootstrapCDN: false
+  # useBootstrapCDN: false
 
   # If you want to load dynamically responsive images from Cloudinary
   # This requires your images to be uploaded + hosted on Cloudinary
@@ -69,7 +38,7 @@ params:
   # cloudinary_cloud_name: "YOUR_CLOUD_NAME"
 
   # Whether the fade animations on the home page will be enabled
-  animate: true
+  # animate: true
 
   theme:
     disableThemeToggle: true
@@ -77,93 +46,59 @@ params:
     color:  
         secondaryBackgroundColor: "Blue"
 
-  # font:
-  #   fontSize: 1rem # default: 1rem
-  #   fontWeight: 400 # default: 400
-  #   lineHeight: 1.5 # default: 1.5
-  #   textAlign: left # default: left
-
-  # color preference
-  # color:
-  #   textColor:
-  #   secondaryTextColor:
-  #   backgroundColor:
-  #   secondaryBackgroundColor:
-  #   primaryColor:
-  #   secondaryColor:
-
-  #   darkmode:
-  #     textColor:
-  #     secondaryTextColor:
-  #     backgroundColor:
-  #     secondaryBackgroundColor:
-  #     primaryColor:
-  #     secondaryColor:
-
   # If you want to customize the menu, you can change it here
   navbar:
-    align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
-    # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
-    # showBrandLogo: false # Show brand logo in nav bar | default is true
-    brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
-    disableSearch: false
-    # searchPlaceholder: "Search"
-    menus:
-      disableAbout: false
-      disableExperience: false
-      disableEducation: false
-      disableProjects: false
-      disableAchievements: false
-      disableContact: false
+    position: absolute
+    # align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
+    # # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
+    # # showBrandLogo: false # Show brand logo in nav bar | default is true
+    # brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
+    # disableSearch: false
+    # # searchPlaceholder: "Search"
+    # menus:
+    #   disableAbout: false
+    #   disableExperience: false
+    #   disableEducation: false
+    #   disableProjects: false
+    #   disableAchievements: false
+    #   disableContact: false
 
   # Hero
   hero:
     enable: true
-    intro: "Hi, my name is"
+    intro: "Hi there! I am "
     title: "Sharanya Gandla."
-    subtitle: "I build things for the web"
+    subtitle: "Graduate student at San Jose State University"
     content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that looks great, feels fantastic, and functions correctly."
-    # image: /images/hero.svg
-    bottomImage:
-      enable: true
-    # roundImage: true # Make hero image circular | default false
+    # image: "/images/sharanya.png"
     button:
       enable: true
       name: "Resume"
-      url: "#"
+      url: "https://drive.google.com/file/d/10ysNqbWH2Ju29mrwAXoDFvoK22gw4FOH/view?usp=sharing"
       download: true
-      newPage: false
+      newPage: true
     socialLinks:
       fontAwesomeIcons:
         - icon: fab fa-github
           url: https://github.com/sharanya510
         - icon: fab fa-linkedin
           url: https://www.linkedin.com/in/sharanya-gandla-4097a7188/
-        # - icon: fab fa-twitter
-        #   url: https://example.com
-      customIcons:
-        - icon: /fav.png
-          url: "https://example.com"
 
   # About
   about:
     enable: true
-    title: "About Me"
-    image: "/images/me.png"
+    title: "I'm Open to work from December 2023"
+    image: "/images/sharanya.png"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. 
-
-      I am currently working on a project that will be used to help people find the best way to get around the city.
+     A Masters in Data Science student with 4+ years of academic experience in Python, R, Machine Learning and Big Data. 
+     I have a strong interest in the the intersection of Technology and Business.
+     
     skills:
       enable: true
-      title: "Here are a few technologies I've been working with recently:"
+      title: "Skills:"
       items:
-        - "HTML"
-        - "CSS"
-        - "JavaScript"
-        - "React"
-        - "Node"
-        - "Express"
+        - "Python, R, SQL, Spark in Databricks, Sci-Kit Learn, MLops, AWS"
+        - "Mentorship, Multi-Cultural Fluency, Team Player"
 
   # Experience
   experience:
