--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,7 @@ params:
   # title: "Hugo Profile"
   # description: Text about my cool site
   # # staticPath: ""  # The path to serve the static files from
-  # favicon: "/fav.png"
+  favicon: "/fav.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -50,9 +50,8 @@ params:
   navbar:
     position: absolute
     # align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
-    # # brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
-    # # showBrandLogo: false # Show brand logo in nav bar | default is true
-    # brandName: "Hugo Profile" # Brand name for the brand | default is the title variable
+    brandLogo: null  # Logo for the brand | default is the favicon variable
+    showBrandLogo: false # Show brand logo in nav bar | default is true
     disableSearch: true
     # # searchPlaceholder: "Search"
     # menus:
