--- a/config.yaml
+++ b/config.yaml
@@ -103,8 +103,8 @@ params:
         - "Databases: MySQL, Microsoft SQL server, MongoDB"
         - "Machine Learning Tools: Pandas, Numpy, TensorFlow, PyTorch, TensorFlow Serving, Sci-Kit learn, Keras"
         - "Tools and software: Jenkins, Terraform, Site 24x7, Sensu, Apigee, Rundeck, Docker, Kubernetes, Helm, Vault, Git, Github Actions, Chef, ArgoCD, Artifactory, Bitbucket, Postman, Kibana, Elastic Search, Matlab, Tableau, Grafana, Prometheus"
-        # - "Cloud: Microsoft Azure, GCP, AWS, Heroku"
-        # - "Leadership: "Mentorship, Multi-Cultural Fluency, Team Player"
+        - "Cloud: Microsoft Azure, GCP, AWS, Heroku"
+        - "Leadership: Mentorship, Multi-Cultural Fluency, Team Player"
 
   # Experience
   experience:
