--- a/config.yaml
+++ b/config.yaml
@@ -97,14 +97,16 @@ params:
      
     skills:
       enable: true
-      title: "Skills:"
+      title: "Skills"
       items:
-        - "Programming Languages: C, C++, Python, Unix/Linux, GoLang, HTML, CSS, YAML, JSON, XML, Bash, Powershell, JavaScript"
+        - "Framework & Libraries: React, NodeJS, Flask, Express"
+        - "Databases: MySQL, MongoDB, Redis, Elasticsearch"
+        - "Networking: RESTful API, gRPC, TCP, UDP, HTTP , WebSocket, Nginx, Tomcat"
+        - "Enterprise Tools: Logstash, Kibana, Grafana, Apache Kafka, Postman, Prometheus"
+        - "Programming Languages: C, C++, Python, GO, HTML, CSS, Powershell, Bash, Unix/Linux, Javascript"
+        - "Certifications: AZ-900 Microsoft Fundamentals, Getting Started with GKE by Coursera, GCP by coursera"
         - "Machine Learning Tools: Pandas, Numpy, TensorFlow, PyTorch, TensorFlow Serving, Sci-Kit learn, Keras"
-        - "Cloud: Microsoft Azure, GCP, AWS, Heroku"
-        - "Databases: MySQL, Microsoft SQL server, MongoDB"
-        - "Leadership: Mentorship, Multi-Cultural Fluency, Team Player"
-        - "Tools and software: Jenkins, Terraform, Site 24x7, Sensu, Apigee, Rundeck, Docker, Kubernetes, Helm, Vault, Git, Github Actions, Chef, ArgoCD, Artifactory, Bitbucket, Postman, Kibana, Elastic Search, Matlab, Tableau, Grafana, Prometheus"
+        - "Cloud Technologies,Cloud Native and DevOps: AWS, Azure, GCP, Git, Jenkins, Chef, Terraform, Docker, Kubernetes, Sensu, Site 24x7, Apigee, Rundeck, Helm, Vault, Git, GitHub Actions, BitBucket, Matlab, Tableau, Artifactory, ArgoCD"
 
   # Experience
   experience:
@@ -124,6 +126,7 @@ params:
           - Spearheaded the Migration from ARM to Terraform initiative across 6 products, increasing flexibility for deployment.
           - Deployed automation for globally patching and booting virtual machines on the Azure cloud, leading to a reduction of approximately 16 hours per week in time expended by the cloud team.
           - Executed a POC to establish a resilient Continuous Delivery(CD) pipeline employing ArgoCD v2.2.2 for automating deployments.
+          - Setup ELK (Elasticsearch, Logstash, and Kibana) stack for multiple products to analyze logs in real-time, providing valuable insights for the development and operations teams.
 
       - job: "Software Engineer I"
         company: "NCR Corporation"
@@ -135,12 +138,12 @@ params:
         content: |
           Hyderabad, India
           - Devised and put into practice an extensive process leveraging Apigee and GitHub Actions to manage traffic throughout the “Migration from on-premise to Azure” project.
-          - NCRs food ordering operations achieved the capacity to accommodate 4 times the normal traffic load and process approximately 2 million transactions each day.
-          - Migrated over 2,000 companies in flights by efficiently splitting traffic based on weights and percentages tailored to customer requirements, ensuring seamless transition during the migration process.
-          - Researched on CINC, a highly efficient configuration management tool automating file management, data bags, and secret management, significantly reducing manual efforts and enhancing overall operational efficiency.
           - Utilized sensu monitoring tool with helm across 10 products, performing version control mechanism revamped efficiency by 20%.
           - Designed a synthetic monitoring system leveraging site 24x7, incorporating a selenium recorder to simulate User Flow and API functionality. Integrated with pagerduty for real-time notifications, reducing incident response time by 40%.
-          - Created dashboards for multiple clients to notice the performance of the application during heavy traffic and peak time.
+          - Created container Images using Docker, registry management, container orchestration, demonstrated by successfully writing, pushing, and testing images on Docker Hub, and Azure Container Registry for efficient application deployment.
+          - Migrated all repositories from Jenkins to GitHub Actions, utilizes YAML for defining workflows, leading to faster builds and deployments.
+          - Implemented the rolling update strategy in Kubernetes to enable seamless updates of the NOLO application without causing any downtime.
+
 
       - job: "Software Engineer Intern"
         company: "NCR Corporation"
