--- a/config.yaml
+++ b/config.yaml
@@ -71,11 +71,11 @@ params:
     content: "A passionate graduate student who loves exploring latest technologies, building POCs and incorporating them into existing products.
     I really enjoy painting, baking and photography.
     I live in San Jose, California, USA."
-    image: "/images/sharanya1.png"
+    image: "/images/sharanya3.png"
     button:
       enable: true
       name: "Resume"
-      url: "https://drive.google.com/file/d/1ZT2cUwP2zS1amhiPlEWVYxuN1TFTvb5Q/view?usp=drive_link"
+      url: "https://drive.google.com/file/d/1FylrqSFkzbS9fY4qJktBYfWKiSXypCiE/view?usp=sharing"
       download: true
       newPage: true
     socialLinks:
@@ -90,7 +90,7 @@ params:
   about:
     enable: true
     title: "About"
-    image: "/images/sharanya2.png"
+    image: "/images/sharanya1.png"
     content: |-
      Currently looking for Full-time opportunities. Pursuing master's degree in Data Science with 2.5 years of professional experience as a Software Engineer at NCR Corporation, Hyderabad, India. 
      Seeking to work at the intersection of Technology and Business.
@@ -100,8 +100,8 @@ params:
       title: "Skills"
       items:
         - "Framework & Libraries: React, NodeJS, Flask, Express"
-        - "Databases: MySQL, MongoDB, Redis, Elasticsearch"
-        - "Networking: RESTful API, gRPC, TCP, UDP, HTTP , WebSocket, Nginx, Tomcat"
+        - "Databases: MySQL, MongoDB, Elasticsearch"
+        - "Networking: RESTful API, HTTP, Nginx"
         - "Enterprise Tools: Logstash, Kibana, Grafana, Apache Kafka, Postman, Prometheus"
         - "Programming Languages: C, C++, Python, GO, HTML, CSS, Powershell, Bash, Unix/Linux, Javascript"
         - "Certifications: AZ-900 Microsoft Fundamentals, Getting Started with GKE by Coursera, GCP by coursera"
@@ -122,10 +122,10 @@ params:
           content: "Location: Hyderabad, India "
         content: |
           Hyderabad, India
-          - Led and managed the Chef Upgrade project, migrated all cookbooks from Chef version 14 to 17.
-          - Spearheaded the Migration from ARM to Terraform initiative across 6 products, increasing flexibility for deployment.
-          - Deployed automation for globally patching and booting virtual machines on the Azure cloud, leading to a reduction of approximately 16 hours per week in time expended by the cloud team.
-          - Executed a POC to establish a resilient Continuous Delivery(CD) pipeline employing ArgoCD v2.2.2 for automating deployments.
+          - Led and managed the “Chef Upgrade” project, migrated all cookbooks from Chef version 14 to 17.
+          - Spearheaded the “Migration from ARM to Terraform” initiative across 6 products, resulting in increasing flexibility for deployment.
+          - Deployed automation for globally patching and booting virtual machines on the Azure cloud using azure automation account, leading to a reduction of approximately 16 hours per week in time expended by the cloud team.
+          - Executed a POC to establish a resilient Continuous Delivery(CD) pipeline employing “ArgoCD” v2.2.2 for automating deployments.
           - Setup ELK (Elasticsearch, Logstash, and Kibana) stack for multiple products to analyze logs in real-time, providing valuable insights for the development and operations teams.
 
       - job: "Software Engineer I"
@@ -139,11 +139,10 @@ params:
           Hyderabad, India
           - Devised and put into practice an extensive process leveraging Apigee and GitHub Actions to manage traffic throughout the “Migration from on-premise to Azure” project.
           - Utilized sensu monitoring tool with helm across 10 products, performing version control mechanism revamped efficiency by 20%.
-          - Designed a synthetic monitoring system leveraging site 24x7, incorporating a selenium recorder to simulate User Flow and API functionality. Integrated with pagerduty for real-time notifications, reducing incident response time by 40%.
+          - Facilitated data retrieval for developers by executing select queries on databases, subsequently streamlining the process through the development of a PowerShell script integrated with SQL modules.
           - Created container Images using Docker, registry management, container orchestration, demonstrated by successfully writing, pushing, and testing images on Docker Hub, and Azure Container Registry for efficient application deployment.
           - Migrated all repositories from Jenkins to GitHub Actions, utilizes YAML for defining workflows, leading to faster builds and deployments.
-          - Implemented the rolling update strategy in Kubernetes to enable seamless updates of the NOLO application without causing any downtime. Used to orchestrate the deployment, scaling and management of Docker Containers.
-
+          - Containerized an online ordering product (NOLO) and Implemented the rolling update strategy in Kubernetes to enable seamless updates of the NOLO application without causing any downtime.
 
       - job: "Software Engineer Intern"
         company: "NCR Corporation"
@@ -154,7 +153,9 @@ params:
           content: "Location: Hyderabad, India "
         content: |
           Hyderabad, India
-          - Built customized dashboards for multiple clients to monitor application performance during high traffic periods. These dashboards increased visibility and allowed for proactive troubleshooting, resulting in a 15% reduction in system downtime.
+          - Setup monitoring for multiple products using Site 24x7, Sensu and Prometheus. Built customized dashboards with Application Insights to monitor application performance during high traffic periods.
+          - For visualization, I used Grafana, Kibana. These dashboards increased visibility and allowed for proactive troubleshooting.
+
 
       - job: "Software Trainee"
         company: "CDAC"
