--- a/config.yaml
+++ b/config.yaml
@@ -100,7 +100,7 @@ params:
       title: "Skills"
       items:
         - "Framework & Libraries: React, NodeJS, Flask, Express"
-        - "Databases: MySQL, MongoDB, Elasticsearch"
+        - "Databases: MySQL, MongoDB, PostgreSQL, Elasticsearch"
         - "Networking: RESTful API, HTTP, Nginx"
         - "Enterprise Tools: Logstash, Kibana, Grafana, Apache Kafka, Postman, Prometheus"
         - "Programming Languages: C, C++, Python, GO, HTML, CSS, Powershell, Bash, Unix/Linux, Javascript"
@@ -125,8 +125,8 @@ params:
           - Led and managed the “Chef Upgrade” project, migrated all cookbooks from Chef version 14 to 17.
           - Spearheaded the “Migration from ARM to Terraform” initiative across 6 products, resulting in increasing flexibility for deployment.
           - Deployed automation for globally patching and booting virtual machines on the Azure cloud using azure automation account, leading to a reduction of approximately 16 hours per week in time expended by the cloud team.
-          - Executed a POC to establish a resilient Continuous Delivery(CD) pipeline employing “ArgoCD” v2.2.2 for automating deployments.
-          - Setup ELK (Elasticsearch, Logstash, and Kibana) stack for multiple products to analyze logs in real-time, providing valuable insights for the development and operations teams.
+          - Led and contributed to the development of client-server RESTful endpoints for NOLO, supporting the implementation of new features.
+          - Enhanced the NOLO product's performance, scalability, availability, and reliability during peak hours and Super Bowl events by implementing infrastructure improvements. Ensured compliance with SLAs to prevent any issues.
 
       - job: "Software Engineer I"
         company: "NCR Corporation"
@@ -139,7 +139,7 @@ params:
           Hyderabad, India
           - Devised and put into practice an extensive process leveraging Apigee and GitHub Actions to manage traffic throughout the “Migration from on-premise to Azure” project.
           - Utilized sensu monitoring tool with helm across 10 products, performing version control mechanism revamped efficiency by 20%.
-          - Facilitated data retrieval for developers by executing select queries on databases, subsequently streamlining the process through the development of a PowerShell script integrated with SQL modules.
+          - Facilitated data retrieval for developers by executing select queries on databases, subsequently streamlining the process through a PowerShell script. Designed and executed updates to database schemas, models, queries for improving data management efficiency.
           - Created container Images using Docker, registry management, container orchestration, demonstrated by successfully writing, pushing, and testing images on Docker Hub, and Azure Container Registry for efficient application deployment.
           - Migrated all repositories from Jenkins to GitHub Actions, utilizes YAML for defining workflows, leading to faster builds and deployments.
           - Containerized an online ordering product (NOLO) and Implemented the rolling update strategy in Kubernetes to enable seamless updates of the NOLO application without causing any downtime.
